# jornada_challenges

./: README.md  first_challenge.db  first_challenge.py  pyproject.toml  query_challenge.py
first_crud/: Dockerfile  README.md  pyproject.toml
first_crud/src/: database.py  main.py
